--- a/03-SendingEmailsUsingEmailJS/03-connecting_to_the_email_service_using_their_sdk/contact.html
+++ b/03-SendingEmailsUsingEmailJS/03-connecting_to_the_email_service_using_their_sdk/contact.html
@@ -10,16 +10,18 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.2.4/email.min.js"></script>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
     <script type="text/javascript">
         (function() {
-            emailjs.init("user_vanqZMkpPOADQP2iEpqKS");
+            emailjs.init("user_COwwBJA8TJfcvOq2nUlax");
             emailjs.send("gmail", "rosie", {
-                name: "Aaron",
+                name: "sam",
                 notes: "The project that I want is..."
             })
         })();
     </script>
+
 </head>
 
 <body>
